Off-canvas panel dark mode gradient: fixed missing unit in hsla().

--- a/stylesheets/components/offcanvas.scss
+++ b/stylesheets/components/offcanvas.scss
@@ -45,7 +45,7 @@
     @include colour.on-dark-scheme {
       background-image: linear-gradient(
         to bottom,
-        hsla(0, 0, 100%, 0),
+        hsla(0, 0%, 100%, 0),
         #{motion.$easing-accelerate},
         white,
       );
